force-app/main/default/objects/Custom_Reqs__c/Custom_Reqs__c.object-meta.xml
<CustomObject>
    <description>Represents the custom requirements imposed by restricted funds that apply to the linked proposals</description>
    <label>Custom Reqs</label>
    <nameField>
        <label>Custom Reqs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Reqs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>