force-app/main/default/objects/Custom_Reqs__c/fields/Date_ended__c.field-meta.xml
<CustomField>
    <fullName>Date_ended__c</fullName>
    <description>Date on which reporting reqs was terminated</description>
    <inlineHelpText>Date on which reporting reqs was terminated</inlineHelpText>
    <label>Date ended</label>
    <type>Date</type>
</CustomField>