force-app/main/default/objects/Custom_Reqs__c/fields/Date_started__c.field-meta.xml
<CustomField>
    <fullName>Date_started__c</fullName>
    <description>Date on which reporting reqs was launched</description>
    <inlineHelpText>Date on which reporting reqs was launched</inlineHelpText>
    <label>Date started</label>
    <type>Date</type>
</CustomField>