force-app/main/default/objects/Custom_Reqs__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Highlighted notes for this reporting reqs record</description>
    <inlineHelpText>Highlighted notes for this reporting reqs record</inlineHelpText>
    <label>Highlights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>