force-app/main/default/objects/Custom_Reqs__c/fields/Form_proposal_Application__c.field-meta.xml
<CustomField>
    <fullName>Form_proposal_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The application form to be used for proposals linked to this custom reqs</description>
    <inlineHelpText>The application form to be used for proposals linked to this custom reqs</inlineHelpText>
    <label>Form proposal Application</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Custom Reqs</relationshipLabel>
    <relationshipName>Custom_Reqs</relationshipName>
    <type>Lookup</type>
</CustomField>