force-app/main/default/objects/Custom_Reqs__c/fields/FS_Group__c.field-meta.xml
<CustomField>
    <fullName>FS_Group__c</fullName>
    <description>Name of FS Group that aligns with DeveloperName of Public Group to which this record belongs.</description>
    <inlineHelpText>Name of FS Group that aligns with DeveloperName of Public Group to which this record belongs.</inlineHelpText>
    <label>FS Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_Group</valueSetName>
    </valueSet>
</CustomField>