force-app/main/default/objects/Custom_Reqs__c/fields/Num_milestone_specs__c.field-meta.xml
<CustomField>
    <fullName>Num_milestone_specs__c</fullName>
    <description>The number of milestone specs for this custom reqs</description>
    <inlineHelpText>The number of milestone specs for this custom reqs</inlineHelpText>
    <label>Num milestone specs</label>
    <summaryForeignKey>Milestone_Spec__c.Custom_Reqs__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>