force-app/main/default/objects/Custom_Reqs__c/fields/Proposal_review_form__c.field-meta.xml
<CustomField>
    <fullName>Proposal_review_form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The review form to be used for proposals linked to this Custom Reqs</description>
    <inlineHelpText>The review form to be used for proposals linked to this Custom Reqs</inlineHelpText>
    <label>Proposal review form</label>
    <referenceTo>Review_Form__c</referenceTo>
    <relationshipLabel>Custom Reqs</relationshipLabel>
    <relationshipName>Custom_Reqs</relationshipName>
    <type>Lookup</type>
</CustomField>