force-app/main/default/objects/Custom_Reqs__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Purpose of this reporting reqs</description>
    <inlineHelpText>Purpose of this reporting reqs</inlineHelpText>
    <label>Purpose</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>