force-app/main/default/objects/Custom_Reqs__c/fields/Total_fraction_of_amount_awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_fraction_of_amount_awarded__c</fullName>
    <description>The total of the &quot;Fraction of amount awarded&quot; fields in the payment milestone specs</description>
    <inlineHelpText>The total of the &quot;Fraction of amount awarded&quot; fields in the payment milestone specs</inlineHelpText>
    <label>Total fraction of amount awarded</label>
    <summarizedField>Milestone_Spec__c.Fraction_of_amount_awarded__c</summarizedField>
    <summaryForeignKey>Milestone_Spec__c.Custom_Reqs__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>