force-app/main/default/objects/Custom_Reqs__c/validationRules/TotalFractionAmountAwarded.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalFractionAmountAwarded</fullName>
    <active>true</active>
    <description>Please check the Fraction Amount Awarded field in payment milestone specs in this custom reqs.
 The total across the milestone specs must not be &gt; 1 (that is, 100%)</description>
    <errorConditionFormula>Total_fraction_of_amount_awarded__c &gt; 1</errorConditionFormula>
    <errorMessage>Please check the Fraction Amount Awarded field in payment milestone specs in this custom reqs.
 The total across the milestone specs must not be &gt; 1 (that is, 100%)</errorMessage>
</ValidationRule>