force-app/main/default/objects/Custom_Reqs__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Num_milestone_specs__c</columns>
    <columns>Purpose__c</columns>
    <columns>Date_started__c</columns>
    <columns>Date_ended__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All - Active</label>
</ListView>